# Filemer

./: Cargo.toml  Filemer.pot  WindowsInstaller_InstallForge.ifp  build.rs
lang/vi/LC_MESSAGES/: filemer.mo  filemer.po
src/: main.rs
ui/: abstractwindows.slint  advancedwindows.slint  dialog.slint  simplewindows.slint
ui/widgets/: file.slint  radiobutton.slint
